#498  improving code scannability throughout the backend codebase while maintaining proper Java formatting standards removing excessive blank lines